Feature/stream (#8)
* Adding join option

* Allow more control for requiring twitter info

* Refacting, only exposing interfaces

* Refacting, only exposing interfaces

* Applying Effective Java :)

* Type fix: 😅

* Fix Sonar issues: 😅

* Setup mock server